--- a/pages/ship.html
+++ b/pages/ship.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ship</title>
-    <link rel="stylesheet" href="./ship.css" />
+    <link rel="stylesheet" href="../css/ship.css" />
   </head>
   <body>
     <header><div class="color current"></div></header>
@@ -35,6 +35,6 @@
         <div class="color purple" id="purple"></div>
       </div>
     </footer>
-    <script src="./ship.js"></script>
+    <script src="../js/ship.js"></script>
   </body>
 </html>
