--- a/pages/car.html
+++ b/pages/car.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car</title>
-    <link rel="stylesheet" href="./car.css" />
+    <link rel="stylesheet" href="../css/car.css" />
   </head>
   <body>
     <header><div class="color current"></div></header>
@@ -34,6 +34,6 @@
       </div>
     </footer>
 
-    <script src="./car.js"></script>
+    <script src="../js/car.js"></script>
   </body>
 </html>
