--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="game">
+      <div class="vf"></div>
       <aside>
         <div class="numbers">
           <div class="number">1</div>
