--- a/pages/memory.html
+++ b/pages/memory.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="../css/memory.css" />
   </head>
   <body>
+    <aside>
+      <h2>
+        left
+        <h1>10</h1>
+        times
+      </h2>
+    </aside>
     <div class="game">
       <div class="card"></div>
       <div class="card"></div>
