--- a/pages/memory.html
+++ b/pages/memory.html
@@ -15,22 +15,22 @@
       </h2>
     </aside>
     <div class="game">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
+      <div class="card"><img src="" alt="" />click</div>
     </div>
     <script src="../js/memory.js"></script>
   </body>
