--- a/pages/memory.html
+++ b/pages/memory.html
@@ -8,29 +8,77 @@
   </head>
   <body>
     <aside>
-      <h2>
+      <div>
         left
-        <h1>10</h1>
+        <h1></h1>
         times
-      </h2>
+      </div>
     </aside>
     <div class="game">
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
-      <div class="card"><img src="" alt="" />click</div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
+      <div class="card">
+        <img src="" alt="" />
+        <p>click</p>
+      </div>
     </div>
     <script src="../js/memory.js"></script>
   </body>
