--- a/pages/memory.html
+++ b/pages/memory.html
@@ -13,72 +13,91 @@
         <h1></h1>
         times
       </div>
+      <button>cover the cards</button>
     </aside>
-    <div class="game">
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
+    <main>
+      <div class="game">
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <p>click</p>
+        </div>
       </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
-      <div class="card">
-        <img src="" alt="" />
-        <p>click</p>
-      </div>
+    </main>
+    <div class="side">
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+      <div class="cardKnow"></div>
+    </div>
+    <div class="youWin">you win!!
+      <button>play again?</button>
+    </div>
+    <div class="youFailed">you failed this time...
+      <button>play again?</button>
     </div>
     <script src="../js/memory.js"></script>
   </body>
