--- a/pages/memory.html
+++ b/pages/memory.html
@@ -8,12 +8,10 @@
   </head>
   <body>
     <aside>
-      <div>
-        left
+      <div class="left">
         <h1></h1>
-        times
       </div>
-      <button>cover the cards</button>
+      <button class="cover">cover the cards</button>
     </aside>
     <main>
       <div class="game">
@@ -93,10 +91,12 @@
       <div class="cardKnow"></div>
       <div class="cardKnow"></div>
     </div>
-    <div class="youWin">you win!!
+    <div class="youWin">
+      you win!!
       <button>play again?</button>
     </div>
-    <div class="youFailed">you failed this time...
+    <div class="youFailed">
+      you failed this time...
       <button>play again?</button>
     </div>
     <script src="../js/memory.js"></script>
