--- a/pages/memory.html
+++ b/pages/memory.html
@@ -82,22 +82,22 @@
       </div>
     </main>
     <div class="side">
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
-      <div class="cardKnow"></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src=""></div>
     </div>
     <div class="youWin">
       you win!!
-      <button>play again?</button>
+      <button class="again">play again?</button>
     </div>
     <div class="youFailed">
       you failed this time...
-      <button>play again?</button>
+      <button class="again">play again?</button>
     </div>
     <script src="../js/memory.js"></script>
   </body>
