--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -26,9 +26,9 @@
       </main>
     </div>
     <footer>
-      <button class="reset">retet</button>
+      <button class="reset">reset</button>
       <button class="solution">show solution</button>
-      <button class="back">back to menu</button>
+      <button class="back"> <a href="../pages/games menu.html">back to menu</a></button>
     </footer>
     <script src="../js/sudokuEase.js"></script>
   </body>
