--- a/pages/TIC Tac Toe.html
+++ b/pages/TIC Tac Toe.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="youre">
-      <h1>I want to be</h1>
+      <h1>I want to be:</h1>
       <button>X</button>
       <button>O</button>
     </div>
