--- a/pages/games menu.html
+++ b/pages/games menu.html
@@ -18,7 +18,7 @@
           <a href="../pages/sudoku.html"><p>Sudoku</p></a>
         </div>
         <div class="menu drawing">
-          <a href="../pages/draw menu.html"><p>To draw...</p></a>
+          <a href="../pages/draw menu.html"><p>Draw...</p></a>
         </div>
         <div class="menu tic-tac-toe">
           <a href="../pages/TIC Tac Toe.html"><p>Tic Tac Toe</p></a>
