--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           <br />
           <button type="submit" value="Login">Login</button>
         </form>
-        <h2>Don't have an account yet? <p id="sign-up">Sign up</p></h2>
+        <h2>
+          Don't have an account yet?
+          <p id="sign-up">Sign up</p>
+        </h2>
       </div>
       <div class="sign-up">
         <h1>Sing up</h1>
