--- a/pages/TIC-Tac-Toe.html
+++ b/pages/TIC-Tac-Toe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TIC Tac Toe</title>
-    <link rel="stylesheet" href="../css/TIC Tac Toe.css" />
+    <link rel="stylesheet" href="../css/TIC-Tac-Toe.css" />
   </head>
   <body>
     <div class="youre">
@@ -35,6 +35,6 @@
         <button class="again">play again?</button>
       </div>
     </div>
-    <script src="../js/TIC Tac Toe.js"></script>
+    <script src="../js/TIC-Tac-Toe.js"></script>
   </body>
 </html>
