--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>landing page</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <header>
@@ -55,6 +55,6 @@
       <div class="about">About</div>
       <div class="contact">Contact us</div>
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
