--- a/pages/draw-menu.html
+++ b/pages/draw-menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>drawing menu</title>
-    <link rel="stylesheet" href="../css/draw menu.css">
+    <link rel="stylesheet" href="../css/draw-menu.css" />
   </head>
   <body>
     <div class="menu ship">
