--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games menu</title>
-    <link rel="stylesheet" href="../css/Games menu.css" />
+    <link rel="stylesheet" href="../css/Games-menu.css" />
   </head>
   <body>
     <header>
@@ -18,10 +18,10 @@
           <a href="../pages/sudoku.html"><p>Sudoku</p></a>
         </div>
         <div class="menu drawing">
-          <a href="../pages/draw menu.html"><p>Draw...</p></a>
+          <a href="../pages/draw-menu.html"><p>Draw...</p></a>
         </div>
         <div class="menu tic-tac-toe">
-          <a href="../pages/TIC Tac Toe.html"><p>Tic Tac Toe</p></a>
+          <a href="../pages/TIC-Tac-Toe.html"><p>Tic Tac Toe</p></a>
         </div>
         <div class="menu memory">
           <a href="../pages/memory.html"><p>Memory game</p></a>
