--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="introduction">
-        <h1>click on the game you want to play</h1>
+        <h1>choose the game you want to play</h1>
       </div>
     </header>
     <main>
