--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -21,6 +21,12 @@
           <div class="number">9</div>
         </div>
       </aside>
+      <section>
+        <button class="lvl easy">Easy</button>
+        <button class="lvl medium">Medium</button>
+        <button class="lvl hard">Hard</button>
+        <button class="lvl extream">Extream</button>
+      </section>
       <main>
         <div class="board"></div>
       </main>
@@ -28,7 +34,9 @@
     <footer>
       <button class="reset">reset</button>
       <button class="solution">show solution</button>
-      <button class="back"><a href="../pages/games menu.html">back to menu</a></button>
+      <button class="back">
+        <a href="../pages/games menu.html">back to menu</a>
+      </button>
     </footer>
     <script src="../js/sudokuEase.js"></script>
   </body>
