--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -9,6 +9,12 @@
   <body>
     <div class="game">
       <aside>
+        <section>
+          <button class="lvl easy">Easy</button>
+          <button class="lvl medium">Medium</button>
+          <button class="lvl hard">Hard</button>
+          <button class="lvl extream">Extream</button>
+        </section>
         <div class="numbers">
           <div class="number">1</div>
           <div class="number">2</div>
@@ -19,14 +25,10 @@
           <div class="number">7</div>
           <div class="number">8</div>
           <div class="number">9</div>
+          <div class="number">clear</div>
         </div>
       </aside>
-      <section>
-        <button class="lvl easy">Easy</button>
-        <button class="lvl medium">Medium</button>
-        <button class="lvl hard">Hard</button>
-        <button class="lvl extream">Extream</button>
-      </section>
+
       <main>
         <div class="board"></div>
       </main>
