--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="../css/Games-menu.css" />
   </head>
   <body>
+    <nav>
+      <img src="../assents/images/logo-fun-games.png" alt="logo" />
+      <div class="nav-right">
+        <button class="logOut">Log out</button>
+        <div class="user"></div>
+        <div class="score">Total points:</div>
+      </div>
+    </nav>
     <header>
       <div class="introduction">
+        <h1>Welcome back -</h1>
         <h1>Choose the game you want to play</h1>
       </div>
     </header>
@@ -29,5 +38,6 @@
       </div>
     </main>
     <footer></footer>
+    <script src="../js/games-menu.js"></script>
   </body>
 </html>
