--- a/pages/memory.html
+++ b/pages/memory.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="../css/memory.css" />
   </head>
   <body>
+    <nav>
+      <img src="../assents/images/logo-fun-games.png" alt="logo" />
+      <div class="nav-right">
+        <button class="logOut">Log out</button>
+        <div class="user"></div>
+        <div class="score">Total points:</div>
+      </div>
+    </nav>
     <aside>
       <div class="left">
         <h1></h1>
