--- a/pages/TIC-Tac-Toe.html
+++ b/pages/TIC-Tac-Toe.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="../css/TIC-Tac-Toe.css" />
   </head>
   <body>
+    <nav>
+      <img src="../assents/images/logo-fun-games.png" alt="logo" />
+      <div class="nav-right">
+        <button class="logOut">Log out</button>
+        <div class="user"></div>
+        <div class="score">Total points:</div>
+      </div>
+    </nav>
     <div class="youre">
       <h1>I want to be:</h1>
       <button>X</button>
