--- a/pages/draw-menu.html
+++ b/pages/draw-menu.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="../css/draw-menu.css" />
   </head>
   <body>
-    <div class="menu ship">
-      <a href="../pages/ship.html"><p>ship</p></a>
-    </div>
-    <div class="menu car">
-      <a href="../pages/car.html"><p>car</p></a>
-    </div>
+    <nav>
+      <img src="../assents/images/logo-fun-games.png" alt="logo" />
+      <div class="nav-right">
+        <button class="logOut">Log out</button>
+        <div class="user"></div>
+        <div class="score">Total points:</div>
+      </div>
+    </nav>
+    <main>
+      <div class="menu ship">
+        <a href="../pages/ship.html"><p>ship</p></a>
+      </div>
+      <div class="menu car">
+        <a href="../pages/car.html"><p>car</p></a>
+      </div>
+    </main>
+    <script src="../js/draw-menu.js"></script>
   </body>
 </html>
