--- a/pages/ship.html
+++ b/pages/ship.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../css/ship.css" />
   </head>
   <body>
-    <header><div class="color current"></div></header>
+    <header>
+      <div class="color current"></div>
+      <a href="./draw-menu.html">Back to menu</a>
+    </header>
     <main>
       <div class="flag"></div>
       <div class="leftTriangle">
