--- a/pages/car.html
+++ b/pages/car.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../css/car.css" />
   </head>
   <body>
-    <header><div class="color current"></div></header>
+    <header>
+      <div class="color current"></div>
+      <a href="./draw-menu.html">Back to menu</a>
+    </header>
     <main>
       <div class="bodyUp">
         <div class="windowL"></div>
