--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -37,7 +37,14 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <button class="playPause-music">Play background music</button>
+      <audio
+        src="../assents/2019-04-26_-_Tranquility_-_www.fesliyanstudios.com.mp3"
+        id="background-music"
+        loop
+      ></audio>
+    </footer>
     <script src="../js/games-menu.js"></script>
   </body>
 </html>
