--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>landing page</title>
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
@@ -43,6 +44,7 @@
             type="password"
             id="sign-password"
             name="new-customer"
+            minlength="6"
             required
           />
           <button type="submit" value="sign-up" id="signUpNew">Sign up</button>
