--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games menu</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/Games-menu.css" />
   </head>
   <body>
@@ -34,6 +35,9 @@
         </div>
         <div class="menu memory">
           <a href="../pages/memory.html"><p>Memory game</p></a>
+        </div>
+        <div class="menu reverse">
+          <a href="../pages/reverse.html"><p>Reverse</p></a>
         </div>
       </div>
     </main>
