--- a/pages/memory.html
+++ b/pages/memory.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory</title>
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/memory.css" />
   </head>
   <body>
@@ -21,6 +22,7 @@
       </div>
       <button class="cover">cover the cards</button>
     </aside>
+
     <main>
       <div class="game">
         <div class="card">
@@ -90,14 +92,27 @@
       </div>
     </main>
     <div class="side">
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
-      <div class="cardKnow"><img src=""></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+      <div class="cardKnow"><img src="" /></div>
+    </div>
+    <div class="header">
+      <div class="introduction">
+        <h2>Memory game</h2>
+        <br />
+        <p><strong>Object:</strong> to find sets.</p>
+        <p><strong>Instructions:</strong></p>
+        <ol>
+          <li>1. discover 2 cards</li>
+          <li>2. remember the animals</li>
+          <li>3. cover these cards</li>
+        </ol>
+      </div>
     </div>
     <div class="youWin">
       you win!!
