--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sudoku</title>
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/sudoku.css" />
   </head>
   <body>
@@ -44,10 +45,23 @@
     <footer>
       <button class="reset">reset</button>
       <button class="solution">show solution</button>
-      <button class="back">
+      <button class="back" id="back">
         <a href="../pages/games-menu.html">back to menu</a>
       </button>
     </footer>
+    <div class="header">
+      <div class="introduction">
+        <h2>Memory game</h2>
+        <br />
+        <p><strong>Object:</strong> to find sets.</p>
+        <p><strong>Instructions:</strong></p>
+        <ol>
+          <li>1. discover 2 cards</li>
+          <li>2. remember the animals</li>
+          <li>3. cover these cards</li>
+        </ol>
+      </div>
+    </div>
     <div class="youWin">
       you win!!
       <button class="again">play again?</button>
