--- a/pages/car.html
+++ b/pages/car.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car</title>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/car.css" />
   </head>
   <body>
     <header>
       <div class="color current"></div>
-      <a href="./draw-menu.html">Back to menu</a>
+      <a href="./draw-menu.html">Back to draw menu</a>
     </header>
     <main>
       <div class="bodyUp">
