--- a/pages/reverse.html
+++ b/pages/reverse.html
@@ -38,14 +38,14 @@
     </main>
     <div class="header">
       <div class="introduction">
-        <h2>Memory game</h2>
+        <h2>Reverse</h2>
         <br />
-        <p><strong>Object:</strong> to find sets.</p>
+        <p><strong>Object:</strong>Turn as many squares as possible into your color.</p>
         <p><strong>Instructions:</strong></p>
         <ol>
-          <li>1. discover 2 cards</li>
-          <li>2. remember the animals</li>
-          <li>3. cover these cards</li>
+          <li>1. Click on an empty slot</li>
+          <li>2. Make sure there is at least one opponent square near it</li>
+          <li>3. All opponent squares in a straight line to your square will become your color</li>
         </ol>
       </div>
     </div>
