--- a/pages/sudoku.html
+++ b/pages/sudoku.html
@@ -51,15 +51,12 @@
     </footer>
     <div class="header">
       <div class="introduction">
-        <h2>Memory game</h2>
+        <h2>Sudoku</h2>
         <br />
-        <p><strong>Object:</strong> to find sets.</p>
-        <p><strong>Instructions:</strong></p>
-        <ol>
-          <li>1. discover 2 cards</li>
-          <li>2. remember the animals</li>
-          <li>3. cover these cards</li>
-        </ol>
+        <p>
+          <strong>Object: </strong> Let there be all the numbers 1-9 in every
+          row, column and 3*3 square.
+        </p>
       </div>
     </div>
     <div class="youWin">
