--- a/pages/TIC-Tac-Toe.html
+++ b/pages/TIC-Tac-Toe.html
@@ -49,7 +49,7 @@
     </div>
     <div class="header">
       <div class="introduction">
-        <h2>Memory game</h2>
+        <h2>Tic Tac Toe</h2>
         <br />
         <p><strong>Object:</strong>to fill a row/column straight or diagonally.</p>
       </div>
