--- a/pages/TIC-Tac-Toe.html
+++ b/pages/TIC-Tac-Toe.html
@@ -35,6 +35,11 @@
           <div class="cell"></div>
         </div>
       </main>
+      <footer>
+        <div class="back">
+          <a href="../pages/games-menu.html"><button>Back to menu</button></a>
+        </div>
+      </footer>
 
       <div class="alerts">
         <div class="youWin">
@@ -46,6 +51,7 @@
           <button class="again">play again?</button>
         </div>
       </div>
+
     </div>
     <div class="header">
       <div class="introduction">
