--- a/pages/draw-menu.html
+++ b/pages/draw-menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>drawing menu</title>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/draw-menu.css" />
   </head>
   <body>
@@ -17,12 +17,20 @@
       </div>
     </nav>
     <main>
-      <div class="menu ship">
-        <a href="../pages/ship.html"><p>ship</p></a>
+      <div class="main-menu">
+        <div class="menu ship">
+          <a href="../pages/ship.html"><p>ship</p></a>
+        </div>
+        <div class="menu car">
+          <a href="../pages/car.html"><p>car</p></a>
+        </div>
       </div>
-      <div class="menu car">
-        <a href="../pages/car.html"><p>car</p></a>
-      </div>
+
+      <footer>
+        <div class="back">
+          <a href="../pages/games-menu.html"><button>Back to menu</button></a>
+        </div>
+      </footer>
     </main>
     <script src="../js/draw-menu.js"></script>
   </body>
