--- a/pages/memory.html
+++ b/pages/memory.html
@@ -90,17 +90,23 @@
           <p>click</p>
         </div>
       </div>
+
+      <div class="side">
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+        <div class="cardKnow"><img src="" /></div>
+      </div>
     </main>
-    <div class="side">
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-      <div class="cardKnow"><img src="" /></div>
-    </div>
+    <footer>
+      <div class="back">
+        <a href="../pages/games-menu.html"><button>Back to menu</button></a>
+      </div>
+    </footer>
     <div class="header">
       <div class="introduction">
         <h2>Memory game</h2>
