--- a/pages/reverse.html
+++ b/pages/reverse.html
@@ -28,7 +28,7 @@
         <button class="red-player" style="background-color: red"></button>
         <button class="white-player" style="background-color: yellow"></button>
       </div>
-      <table class="board"></table>
+      <div class="board"></div>
       <div class="btn">
         <button class="reset">Reset</button>
         <a href="../pages/games-menu.html"
