--- a/pages/reverse.html
+++ b/pages/reverse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reverse</title>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/reverse.css" />
   </head>
   <body>
@@ -34,21 +34,38 @@
         <a href="../pages/games-menu.html"
           ><button class="back">Back to menu</button></a
         >
+        <button class="checkWinner">Check winner</button>
       </div>
     </main>
     <div class="header">
       <div class="introduction">
         <h2>Reverse</h2>
         <br />
-        <p><strong>Object:</strong>Turn as many squares as possible into your color.</p>
+        <p>
+          <strong>Object:</strong>Turn as many squares as possible into your
+          color.
+        </p>
         <p><strong>Instructions:</strong></p>
         <ol>
           <li>1. Click on an empty slot</li>
           <li>2. Make sure there is at least one opponent square near it</li>
-          <li>3. All opponent squares in a straight line to your square will become your color</li>
+          <li>
+            3. All opponent squares in a straight line to your square will
+            become your color
+          </li>
         </ol>
       </div>
     </div>
+    <footer>
+      <div class="youWin">
+        you win!!
+        <button class="again">play again?</button>
+      </div>
+      <div class="youFailed">
+        you failed this time...
+        <button class="again">play again?</button>
+      </div>
+    </footer>
     <script src="../js/reverse.js"></script>
   </body>
 </html>
