--- a/pages/battleship.html
+++ b/pages/battleship.html
@@ -19,7 +19,10 @@
       </nav>
     </header>
     <main>
-      <div class="board"></div>
+      <div class="board-person"></div>
+      <div class="board-personsEnemy"></div>
+      <div class="board-computer"></div>
+      <div class="board-computersenemy"></div>
     </main>
     <aside></aside>
     <footer>
