--- a/pages/games-menu.html
+++ b/pages/games-menu.html
@@ -39,6 +39,9 @@
         <div class="menu reverse">
           <a href="../pages/reverse.html"><p>Reverse</p></a>
         </div>
+        <div class="menu battleship">
+          <a href="../pages/battleship.html"><p>Battleship</p></a>
+        </div>
       </div>
     </main>
     <footer>
