--- a/pages/battleship.html
+++ b/pages/battleship.html
@@ -8,7 +8,11 @@
     <title>Battleship</title>
   </head>
   <body>
-    <header>
+    <h1>
+      The page is under development. <br />
+      Please wait patiently...
+    </h1>
+    <!-- <header>
       <nav>
         <img src="../assents/images/logo-fun-games.png" alt="logo" />
         <div class="nav-right">
@@ -51,7 +55,7 @@
           </li>
         </ol>
       </div>
-    </footer>
+    </footer> -->
     <script src="../js/battleship.js"></script>
   </body>
 </html>
